update: make x11 work

--- a/modules/theme/catppuccin-dark/x11/polybar/polybar/config.ini
+++ b/modules/theme/catppuccin-dark/x11/polybar/polybar/config.ini
@@ -34,7 +34,7 @@ font-1 = Noto Sans Mono CJK SC:style=Bold:size=11;1
 
 modules-left    = menu  bspwm  temperature mpd
 modules-center  = time
-modules-right   = pulseaudio  memory filesystem network
+modules-right   = pulseaudio memory network
 
 wm-restack = bspwm
 
